--- a/diplomka-text/citations.bib
+++ b/diplomka-text/citations.bib
@@ -17,6 +17,16 @@
   author={Nakamoto, Satoshi},
   year={2008}
 }
+
+@inproceedings{ron2014did,
+  title={How did dread pirate roberts acquire and protect his bitcoin wealth?},
+  author={Ron, Dorit and Shamir, Adi},
+  booktitle={International Conference on Financial Cryptography and Data Security},
+  pages={3--15},
+  year={2014},
+  organization={Springer}
+}
+
 @inproceedings{androulaki2013evaluating,
   title={Evaluating user privacy in bitcoin},
   author={Androulaki, Elli and Karame, Ghassan O and Roeschlin, Marc and Scherer, Tobias and Capkun, Srdjan},
@@ -80,9 +90,10 @@
   date      = {2011},
   title     = {Bank Crime Statistics (BCS)},
   subtitle  = {Federal Insured Financial Institutions, January 1, 2010 – December 31, 2010},
-  location  = {https://www.fbi.gov/stats$-$services/publications/bank$-$crime$-$statistics$-$2010/bank$-$crime$-$statistics$-$2010},
+  location  = {XXX},
   langid    = {english}
 }
+%  location  = {https://www.fbi.gov/stats$-$services/publications/bank$-$crime$-$statistics$-$2010/bank$-$crime$-$statistics$-$2010},
 
 @BOOK{fbcyber,
   publisher    = { Internet Crime Complaint Center},
